fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -1334,8 +1334,8 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  gap: 0 60px;
+  justify-content: center;
+  gap: 0 44px;
 }
 
 .header__consultation_info {
